[package]
name = "zola_abridge_helper"
version = "0.1.1-dev"
authors = ["One <one.bgz1@gmail.com>"]
categories = ["command-line-utilities"]
documentation = "https://docs.rs/zola_abridge_helper"
edition = "2024"
keywords = ["zola", "abridge", "seo", "section", "tag"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/c-git/zola_abridge_helper"
description = "Tool to facilitate working with abridge theme for zola and some simple SEO checks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.4.7", features = ["derive", "cargo", "wrap_help"] }
once_cell = "1.18.0"
regex = "1.10.2"
toml_edit = "0.22.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
version-control-clean-check = "0.1.3"

[dev-dependencies]
